refactor: improve layout structure with global container and font update
Added a reusable .container class for consistent layout.
Switched to Inter for cleaner typography.
Also scaffolded main and footer sections for future content.

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   </head>
   <body>
     <header>
-      <div class="header-container">
+      <div class="container header-container">
         <div class="site-logo">
           <a href="./">LoopSound</a>
         </div>
 
-        <nav aria-label="Main navigation">
+        <nav aria-label="Main navigation" role="navigation">
           <ul class="nav__list">
             <li class="nav__item">
               <a class="nav__link" href="#features">Features</a>
@@ -28,5 +28,15 @@
         </nav>
       </div>
     </header>
+
+    <main>
+      <div class="container content-wrapper">
+        <section></section>
+      </div>
+    </main>
+
+    <footer>
+      <div class="container footer-layout"></div>
+    </footer>
   </body>
 </html>
