--- a/index.html
+++ b/index.html
@@ -31,7 +31,27 @@
 
     <main>
       <div class="container content-wrapper">
-        <section></section>
+        <section class="hero">
+          <div class="hero__text">
+            <h1 class="hero__headline">
+              Smart Sound,<br />
+              Zero Distractions
+            </h1>
+            <p class="hero__description">
+              LoopSound headphones pair instantly, adapt to your environment,
+              and keep you in the zone—whether you're coding, creating, or just
+              chilling
+            </p>
+            <button class="hero__cta">Shop Now</button>
+          </div>
+          <div class="hero__image">
+            <img
+              class="hero__image-img"
+              src="./images/hero-headphones-model.png"
+              alt="Young Black woman wearing LoopSound wireless headphones and smiling"
+            />
+          </div>
+        </section>
       </div>
     </main>
 
