feat: add features section with content and icons
Created new #features section with four feature blocks.
Each block includes a headline, description, and icon.
Moved hero image to /assets and added all SVG icons.
Started base styling with background color.

--- a/index.html
+++ b/index.html
@@ -30,29 +30,88 @@
     </header>
 
     <main>
-      <div class="container content-wrapper">
-        <section class="hero">
-          <div class="hero__text">
-            <h1 class="hero__headline">
-              Smart Sound,<br />
-              Zero Distractions
-            </h1>
-            <p class="hero__description">
-              LoopSound headphones pair instantly, adapt to your environment,
-              and keep you in the zone—whether you're coding, creating, or just
-              chilling
+      <section id="hero" class="container section hero">
+        <div class="hero__text">
+          <h1 class="hero__headline">
+            Smart Sound,<br />
+            Zero Distractions
+          </h1>
+          <p class="hero__description">
+            LoopSound headphones pair instantly, adapt to your environment, and
+            keep you in the zone—whether you're coding, creating, or just
+            chilling
+          </p>
+          <button class="hero__cta">Shop Now</button>
+        </div>
+        <div class="hero__image">
+          <img
+            class="hero__image-img"
+            src="./assets/images/hero-headphones-model.png"
+            alt="Young Black woman wearing LoopSound wireless headphones and smiling"
+          />
+        </div>
+      </section>
+
+      <section id="features" class="section features">
+        <h2 class="container features__headline">
+          Engineered for Focus. Designed for Life
+        </h2>
+
+        <div class="container features__container">
+          <div class="features__item">
+            <div class="features__icon">
+              <img
+                src="./assets/icons/headphone-off.svg"
+                alt="Headphone Off Icon"
+              />
+            </div>
+            <h3 class="features__item-title">Active Noise Cancellation</h3>
+            <p class="features__item-text">
+              Shut out distractions and dive into your zone. LoopSound blocks
+              background noise so you can stay in the flow.
             </p>
-            <button class="hero__cta">Shop Now</button>
           </div>
-          <div class="hero__image">
-            <img
-              class="hero__image-img"
-              src="./images/hero-headphones-model.png"
-              alt="Young Black woman wearing LoopSound wireless headphones and smiling"
-            />
+
+          <div class="features__item">
+            <div class="features__icon">
+              <img
+                src="./assets/icons/battery-charging.svg"
+                alt="Battery Charging Icon"
+              />
+            </div>
+            <h3 class="features__item-title">30+ Hour Battery</h3>
+            <p class="features__item-text">
+              Power through your day and then some. One charge gives you over 30
+              hours of uninterrupted sound.
+            </p>
           </div>
-        </section>
-      </div>
+
+          <div class="features__item">
+            <div class="features__icon">
+              <img src="./assets/icons/headphones.svg" alt="Headphones Icon" />
+            </div>
+            <h3 class="features__item-title">Ultra Comfort Fit</h3>
+            <p class="features__item-text">
+              Lightweight. Cushioned. Adjustable. These are headphones you’ll
+              forget you’re even wearing.
+            </p>
+          </div>
+
+          <div class="features__item">
+            <div class="features__icon">
+              <img
+                src="./assets/icons/sliders-horizontal.svg"
+                alt="Horizontal Sliders Icon"
+              />
+            </div>
+            <h3 class="features__item-title">App-Controlled Sound Profiles</h3>
+            <p class="features__item-text">
+              Personalize your listening experience right from your phone. From
+              bass boost to podcast mode—tune it your way.
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer>
