style: layout and polish features section
Updated class names and styled the features section using flexbox layout.
Improved semantic structure and UI polish with spacing, color, and icon styling.

--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
                 alt="Headphone Off Icon"
               />
             </div>
-            <h3 class="features__item-title">Active Noise Cancellation</h3>
-            <p class="features__item-text">
+            <p class="features__description">
               Shut out distractions and dive into your zone. LoopSound blocks
               background noise so you can stay in the flow.
             </p>
@@ -79,8 +78,7 @@
                 alt="Battery Charging Icon"
               />
             </div>
-            <h3 class="features__item-title">30+ Hour Battery</h3>
-            <p class="features__item-text">
+            <p class="features__description">
               Power through your day and then some. One charge gives you over 30
               hours of uninterrupted sound.
             </p>
@@ -90,8 +88,7 @@
             <div class="features__icon">
               <img src="./assets/icons/headphones.svg" alt="Headphones Icon" />
             </div>
-            <h3 class="features__item-title">Ultra Comfort Fit</h3>
-            <p class="features__item-text">
+            <p class="features__description">
               Lightweight. Cushioned. Adjustable. These are headphones you’ll
               forget you’re even wearing.
             </p>
@@ -104,8 +101,7 @@
                 alt="Horizontal Sliders Icon"
               />
             </div>
-            <h3 class="features__item-title">App-Controlled Sound Profiles</h3>
-            <p class="features__item-text">
+            <p class="features__description">
               Personalize your listening experience right from your phone. From
               bass boost to podcast mode—tune it your way.
             </p>
