refactor: apply unified .icon class to feature icons

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
               <img
                 src="./assets/icons/headphone-off.svg"
                 alt="Headphone Off Icon"
+                class="icon"
               />
             </div>
             <p class="features__description">
@@ -76,6 +77,7 @@
               <img
                 src="./assets/icons/battery-charging.svg"
                 alt="Battery Charging Icon"
+                class="icon"
               />
             </div>
             <p class="features__description">
@@ -86,7 +88,11 @@
 
           <div class="features__item">
             <div class="features__icon">
-              <img src="./assets/icons/headphones.svg" alt="Headphones Icon" />
+              <img
+                src="./assets/icons/headphones.svg"
+                alt="Headphones Icon"
+                class="icon"
+              />
             </div>
             <p class="features__description">
               Lightweight. Cushioned. Adjustable. These are headphones you’ll
@@ -99,6 +105,7 @@
               <img
                 src="./assets/icons/sliders-horizontal.svg"
                 alt="Horizontal Sliders Icon"
+                class="icon"
               />
             </div>
             <p class="features__description">
