feat: add reviews section with styled blockquote

--- a/index.html
+++ b/index.html
@@ -115,6 +115,18 @@
           </div>
         </div>
       </section>
+
+      <section id="reviews" class="section reviews">
+        <blockquote class="blockquote">
+          <p class="blockquote__text">
+            LoopSound makes it way too easy to get in the zone. I finished a
+            week’s work in a day.
+          </p>
+          <p class="blockquote__text blockquote__author">
+            - Leo A., Digital Artist
+          </p>
+        </blockquote>
+      </section>
     </main>
 
     <footer>
