refactor: replace .hero__cta with reusable .btn and .btn--primary

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             keep you in the zone—whether you're coding, creating, or just
             chilling
           </p>
-          <button class="hero__cta">Shop Now</button>
+          <button class="btn btn--primary">Shop Now</button>
         </div>
         <div class="hero__image">
           <img
