refactor: update hero image container and image class names for consistency

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
           </p>
           <button class="btn btn--primary">Shop Now</button>
         </div>
-        <div class="hero__image">
+        <div class="hero__media">
           <img
-            class="hero__image-img"
+            class="hero--image"
             src="./assets/images/hero-headphones-model.png"
             alt="Young Black woman wearing LoopSound wireless headphones and smiling"
           />
