--- a/index.html
+++ b/index.html
@@ -127,6 +127,22 @@
           </p>
         </blockquote>
       </section>
+
+      <section id="cta" class="section cta">
+        <div class="container">
+          <div class="cta__content">
+            <div class="cta__text">
+              <h3 class="cta__title">Experience Silence Like Never Before</h3>
+              <p class="cta__description">
+                Wanna feel the difference? Just click below and grab your pair —
+                it’s that easy.
+              </p>
+            </div>
+
+            <button class="btn btn--secondary">Get Yours</button>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer>
