--- a/index.html
+++ b/index.html
@@ -146,7 +146,11 @@
     </main>
 
     <footer>
-      <div class="container footer-layout"></div>
+      <div class="container">
+        <div class="footer__text">
+          <p>&copy; 2025 LoopSound. Made with focus & flow.</p>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
