--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <div class="container header-container">
         <div class="site-logo">
-          <a href="./">LoopSound</a>
+          <a href="/" class="logo">LoopSound</a>
         </div>
 
         <nav aria-label="Main navigation" role="navigation">
@@ -41,7 +41,7 @@
             keep you in the zone—whether you're coding, creating, or just
             chilling
           </p>
-          <button class="btn btn--primary">Shop Now</button>
+          <a href="#" class="btn btn--primary">Shop Now</a>
         </div>
         <div class="hero__media">
           <img
@@ -139,7 +139,7 @@
               </p>
             </div>
 
-            <button class="btn btn--secondary">Get Yours</button>
+            <a href="#" class="btn btn--secondary">Get Yours</a>
           </div>
         </div>
       </section>
