fix: update CTA text to match button placement

--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
             <div class="cta__text">
               <h3 class="cta__title">Experience Silence Like Never Before</h3>
               <p class="cta__description">
-                Wanna feel the difference? Just click below and grab your pair —
-                it’s that easy.
+                Wanna feel the difference? Just click the button and grab your
+                pair — it’s that easy.
               </p>
             </div>
 
